# minecraft-compression-benchmarks

./: CMakeLists.txt  bitpacking.hpp  main.cpp  palette.hpp  parser.hpp
compressors/: brotli.hpp  bzip2.hpp  libdeflate.hpp  lz4.hpp  null.hpp  zlib.hpp  zstd.hpp
schemes/: opt1.hpp  opt2.hpp  vanilla.hpp
tests/: CMakeLists.txt  bitpacking.cpp  palettization.cpp
